[FEAT] 모임생성 서비스 로직 구현