@@ -1,5 +1,8 @@
 package org.sopt.makers.crew.main.meeting.v2.service;
 
+import static org.sopt.makers.crew.main.common.constant.CrewConst.ACTIVE_GENERATION;
+import static org.sopt.makers.crew.main.common.response.ErrorStatus.VALIDATION_EXCEPTION;
+
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -8,6 +11,7 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
+import org.sopt.makers.crew.main.common.exception.BadRequestException;
 import org.sopt.makers.crew.main.common.pagination.dto.PageMetaDto;
 import org.sopt.makers.crew.main.common.pagination.dto.PageOptionsDto;
 import org.sopt.makers.crew.main.entity.apply.Apply;
@@ -18,7 +22,10 @@ import org.sopt.makers.crew.main.entity.meeting.MeetingRepository;
 import org.sopt.makers.crew.main.entity.post.Post;
 import org.sopt.makers.crew.main.entity.user.User;
 import org.sopt.makers.crew.main.entity.user.UserRepository;
+import org.sopt.makers.crew.main.meeting.v2.dto.MeetingMapper;
 import org.sopt.makers.crew.main.meeting.v2.dto.query.MeetingV2GetAllMeetingByOrgUserQueryDto;
+import org.sopt.makers.crew.main.meeting.v2.dto.request.MeetingV2CreateMeetingBodyDto;
+import org.sopt.makers.crew.main.meeting.v2.dto.response.MeetingV2CreateMeetingResponseDto;
 import org.sopt.makers.crew.main.meeting.v2.dto.response.MeetingV2GetAllMeetingByOrgUserDto;
 import org.sopt.makers.crew.main.meeting.v2.dto.response.MeetingV2GetAllMeetingByOrgUserMeetingDto;
 import org.sopt.makers.crew.main.meeting.v2.dto.response.MeetingV2GetMeetingBannerResponseDto;
@@ -31,80 +38,111 @@ import org.springframework.transaction.annotation.Transactional;
 @Transactional(readOnly = true)
 public class MeetingV2ServiceImpl implements MeetingV2Service {
 
-  private final UserRepository userRepository;
-  private final ApplyRepository applyRepository;
-  private final MeetingRepository meetingRepository;
+    private final static int ZERO = 0;
 
-  @Override
-  public MeetingV2GetAllMeetingByOrgUserDto getAllMeetingByOrgUser(
-      MeetingV2GetAllMeetingByOrgUserQueryDto queryDto) {
-    int page = queryDto.getPage();
-    int take = queryDto.getTake();
+    private final UserRepository userRepository;
+    private final ApplyRepository applyRepository;
+    private final MeetingRepository meetingRepository;
 
-    Optional<User> user = userRepository.findByOrgId(queryDto.getOrgUserId());
-    List<MeetingV2GetAllMeetingByOrgUserMeetingDto> userJoinedList = new ArrayList<>();
+    private final MeetingMapper meetingMapper;
 
-    if (!user.isEmpty()) {
-      User existUser = user.get();
-      userJoinedList = Stream
-          .concat(existUser.getMeetings().stream(),
-              applyRepository.findAllByUserIdAndStatus(existUser.getId(), EnApplyStatus.APPROVE)
-                  .stream().map(apply -> apply.getMeeting()))
-          .map(meeting -> MeetingV2GetAllMeetingByOrgUserMeetingDto.of(meeting.getId(),
-              checkMeetingLeader(meeting, existUser.getId()), meeting.getTitle(),
-              meeting.getImageURL().get(0).getUrl(), meeting.getCategory().getValue(),
-              meeting.getMStartDate(), meeting.getMEndDate(), checkActivityStatus(meeting)))
-          .sorted(Comparator.comparing(MeetingV2GetAllMeetingByOrgUserMeetingDto::getId).reversed())
-          .collect(Collectors.toList());
+    @Override
+    public MeetingV2GetAllMeetingByOrgUserDto getAllMeetingByOrgUser(
+            MeetingV2GetAllMeetingByOrgUserQueryDto queryDto) {
+        int page = queryDto.getPage();
+        int take = queryDto.getTake();
+
+        Optional<User> user = userRepository.findByOrgId(queryDto.getOrgUserId());
+        List<MeetingV2GetAllMeetingByOrgUserMeetingDto> userJoinedList = new ArrayList<>();
+
+        if (!user.isEmpty()) {
+            User existUser = user.get();
+            userJoinedList = Stream
+                    .concat(existUser.getMeetings().stream(),
+                            applyRepository.findAllByUserIdAndStatus(existUser.getId(), EnApplyStatus.APPROVE)
+                                    .stream().map(apply -> apply.getMeeting()))
+                    .map(meeting -> MeetingV2GetAllMeetingByOrgUserMeetingDto.of(meeting.getId(),
+                            checkMeetingLeader(meeting, existUser.getId()), meeting.getTitle(),
+                            meeting.getImageURL().get(0).getUrl(), meeting.getCategory().getValue(),
+                            meeting.getMStartDate(), meeting.getMEndDate(), checkActivityStatus(meeting)))
+                    .sorted(Comparator.comparing(MeetingV2GetAllMeetingByOrgUserMeetingDto::getId).reversed())
+                    .collect(Collectors.toList());
+        }
+
+        List<MeetingV2GetAllMeetingByOrgUserMeetingDto> pagedUserJoinedList =
+                userJoinedList.stream().skip((long) (page - 1) * take) // 스킵할 아이템 수 계산
+                        .limit(take) // 페이지당 아이템 수 제한
+                        .collect(Collectors.toList());
+        PageOptionsDto pageOptionsDto = new PageOptionsDto(page, take);
+        PageMetaDto pageMetaDto = new PageMetaDto(pageOptionsDto, userJoinedList.size());
+        return MeetingV2GetAllMeetingByOrgUserDto.of(pagedUserJoinedList, pageMetaDto);
     }
 
-    List<MeetingV2GetAllMeetingByOrgUserMeetingDto> pagedUserJoinedList =
-        userJoinedList.stream().skip((long) (page - 1) * take) // 스킵할 아이템 수 계산
-            .limit(take) // 페이지당 아이템 수 제한
-            .collect(Collectors.toList());
-    PageOptionsDto pageOptionsDto = new PageOptionsDto(page, take);
-    PageMetaDto pageMetaDto = new PageMetaDto(pageOptionsDto, userJoinedList.size());
-    return MeetingV2GetAllMeetingByOrgUserDto.of(pagedUserJoinedList, pageMetaDto);
-  }
+    @Override
+    public List<MeetingV2GetMeetingBannerResponseDto> getMeetingBanner() {
+        List<MeetingV2GetMeetingBannerResponseDto> meetingBanners = this.meetingRepository.findAll()
+                .stream().sorted(Comparator.comparing(Meeting::getId).reversed()).limit(20).map(meeting -> {
+                    List<Post> post = meeting.getPosts().stream()
+                            .sorted(Comparator.comparing(Post::getId).reversed()).limit(1).toList();
+                    List<Apply> applies = meeting.getAppliedInfo();
 
-  @Override
-  public List<MeetingV2GetMeetingBannerResponseDto> getMeetingBanner() {
-    List<MeetingV2GetMeetingBannerResponseDto> meetingBanners = this.meetingRepository.findAll()
-        .stream().sorted(Comparator.comparing(Meeting::getId).reversed()).limit(20).map(meeting -> {
-          List<Post> post = meeting.getPosts().stream()
-              .sorted(Comparator.comparing(Post::getId).reversed()).limit(1).toList();
-          List<Apply> applies = meeting.getAppliedInfo();
+                    Integer applicantCount = applies.size();
+                    Integer appliedUserCount = applies.stream()
+                            .filter(apply -> apply.getStatus().equals(EnApplyStatus.APPROVE)).toList().size();
 
-          Integer applicantCount = applies.size();
-          Integer appliedUserCount = applies.stream()
-              .filter(apply -> apply.getStatus().equals(EnApplyStatus.APPROVE)).toList().size();
+                    Optional<LocalDateTime> recentActivityDate =
+                            post.isEmpty() ? Optional.empty() : Optional.of(post.get(0).getCreatedDate());
 
-          Optional<LocalDateTime> recentActivityDate =
-              post.isEmpty() ? Optional.empty() : Optional.of(post.get(0).getCreatedDate());
+                    Optional<MeetingV2GetMeetingBannerResponseUserDto> meetingLeader = userRepository
+                            .findById(meeting.getUserId()).map(user -> MeetingV2GetMeetingBannerResponseUserDto
+                                    .of(user.getId(), user.getName(), user.getOrgId(), user.getProfileImage()));
 
-          Optional<MeetingV2GetMeetingBannerResponseUserDto> meetingLeader = userRepository
-              .findById(meeting.getUserId()).map(user -> MeetingV2GetMeetingBannerResponseUserDto
-                  .of(user.getId(), user.getName(), user.getOrgId(), user.getProfileImage()));
+                    return MeetingV2GetMeetingBannerResponseDto.of(meeting.getId(), meeting.getUserId(),
+                            meeting.getTitle(), meeting.getCategory(), meeting.getImageURL(),
+                            meeting.getMStartDate(), meeting.getMEndDate(), meeting.getStartDate(),
+                            meeting.getEndDate(),
+                            meeting.getCapacity(), recentActivityDate, meeting.getTargetActiveGeneration(),
+                            meeting.getJoinableParts(), applicantCount, appliedUserCount, meetingLeader,
+                            meeting.getMeetingStatus());
+                }).toList();
 
-          return MeetingV2GetMeetingBannerResponseDto.of(meeting.getId(), meeting.getUserId(),
-              meeting.getTitle(), meeting.getCategory(), meeting.getImageURL(),
-              meeting.getMStartDate(), meeting.getMEndDate(), meeting.getStartDate(), meeting.getEndDate(),
-              meeting.getCapacity(), recentActivityDate, meeting.getTargetActiveGeneration(),
-              meeting.getJoinableParts(), applicantCount, appliedUserCount, meetingLeader,
-              meeting.getMeetingStatus());
-        }).toList();
+        return meetingBanners;
+    }
 
-    return meetingBanners;
-  }
 
-  private Boolean checkMeetingLeader(Meeting meeting, Integer userId) {
-    return meeting.getUserId().equals(userId);
-  }
+    @Override
+    @Transactional
+    public MeetingV2CreateMeetingResponseDto createMeeting(MeetingV2CreateMeetingBodyDto requestBody, Integer userId) {
+        User user = userRepository.findByIdOrThrow(userId);
 
-  private Boolean checkActivityStatus(Meeting meeting) {
-    LocalDateTime now = LocalDateTime.now();
-    LocalDateTime mStartDate = meeting.getMStartDate();
-    LocalDateTime mEndDate = meeting.getMEndDate();
-    return now.isEqual(mStartDate) || (now.isAfter(mStartDate) && now.isBefore(mEndDate));
-  }
+        if (user.getActivities() == null) {
+            throw new BadRequestException(VALIDATION_EXCEPTION.getErrorCode());
+        }
+
+        if (requestBody.getFiles().size() == ZERO || requestBody.getJoinableParts().length == ZERO) {
+            throw new BadRequestException(VALIDATION_EXCEPTION.getErrorCode());
+        }
+
+        Meeting meeting = meetingMapper.toMeetingEntity(requestBody,
+                getTargetActiveGeneration(requestBody.getCanJoinOnlyActiveGeneration()), ACTIVE_GENERATION, user,
+                user.getId());
+
+        Meeting savedMeeting = meetingRepository.save(meeting);
+        return MeetingV2CreateMeetingResponseDto.of(savedMeeting.getId());
+    }
+
+    private Boolean checkMeetingLeader(Meeting meeting, Integer userId) {
+        return meeting.getUserId().equals(userId);
+    }
+
+    private Boolean checkActivityStatus(Meeting meeting) {
+        LocalDateTime now = LocalDateTime.now();
+        LocalDateTime mStartDate = meeting.getMStartDate();
+        LocalDateTime mEndDate = meeting.getMEndDate();
+        return now.isEqual(mStartDate) || (now.isAfter(mStartDate) && now.isBefore(mEndDate));
+    }
+
+    private Integer getTargetActiveGeneration(Boolean canJoinOnlyActiveGeneration) {
+        return canJoinOnlyActiveGeneration ? ACTIVE_GENERATION : null;
+    }
 }
